Added a RequestTicket page. Added background image to this page via App.css.

--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,23 @@
     transform: rotate(360deg);
   }
 }
+
+/* #requestTicket{
+  background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url('./images/wheelock-place.png');;
+  background-size:cover;
+  background-repeat: no-repeat;
+} */
+
+#requestTicket::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-image: url('./images/wheelock-place.png');
+  background-size:cover;
+  background-repeat: no-repeat;
+  opacity: 0.5;
+  z-index: -1;
+}
