--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  font-family: 'Lexend', sans-serif;
+  font-family: 'Lexend Variable', sans-serif;
 }
 
 .App-logo {
@@ -57,3 +57,16 @@
   opacity: 0.5;
   z-index: -1;
 }
+
+/* #content {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: #ECEDED;
+  background-size: cover;
+  z-index: -1;
+} 
+
+#viewTicket {
+  position:static;
+}*/
